fix overflow

--- a/client/main.scss
+++ b/client/main.scss
@@ -132,7 +132,7 @@ $flatify-light: #ffdde5;
   float: left;
   background: #fff;
   padding: 4rem 5rem;
-  overflow: scroll;
+  overflow-x: scroll;
 }
 .calculator-right {
   position: relative;
